Version 0.10.1

 User-visible changes:
 * conflicts now create conflict-markers in files, and 3 fulltext backups.
 * New --targets command line option for some commands.

 Developer-visible changes:
 * no more dependency on 'patch'; only on GNU diff3 and some version of 'diff'

Version 0.10

 User-visible changes:
 * fewer out-of-memory errors:  (see "memory consumption" below)
 * clearer user errors:
       - detailed marshalling of server errors to client
       - better errors from ra_dav
       - better commandline-client-specific error messages
 * 'svn log' now works on single paths correctly
 * show locked directories in 'svn status'
 * 'svnadmin lstxns' improvements, and new --long switch
 * commits show "Replacing" instead of "Deleting/Adding" (#571)
 * commits show progress on postfix txdeltas.
 * WARNING:  existing repositories need to be upgraded;
             read tools/enable-dupkeys.sh.

 Developer-visible changes:
 * reduced memory consumption
      - new Editor interface that manages pools automatically
      - conversion of most existing editors to new system
      - have libsvn_fs write data to DB streamily
      - reduce DB logfile growth via 'duplicate keys'
      - stop using one pool for post-commit processing
      - stop using one pool for sending all textdeltas
      - many, many other pool-usage improvements in libsvn_wc, ra_dav, etc.
 * start of work on 'svn merge": issue 504, and diff3 integration
 * start of work on disjoint-url detection:  issue 575
 * start removing stringbuf path library funcs; use new const char * funcs
 * better python 2.X detection in test suite
 * svnlook uses single tempdir
 * build system evolution
     - upgrade to neon 0.19.[2-3]
     - lots of work on FreeBSD port
 * many small bugfixes:
      - propedit, file merges, revert, dir_delta, keywords
      - memory leaks in 'svn add', 'svn import/commit', and svnlook
      - date-parsing and readonly bugs


Version 0.9 (released 15 Feb 2002, revision 1302)
